Closed Bug 1396156 Opened 7 years ago Closed 7 years ago

A number of builds are going to permafail when Gecko 57 merges to Beta on 2017-09-14

Categories

(Core :: JavaScript: GC, defect)

defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla57
Tracking Status
firefox57 + verified

People

(Reporter: RyanVM, Assigned: jonco)

References

Details

Attachments

(2 files)

[Tracking Requested - why for this release]: Broken builds on the next merge day.

https://treeherder.mozilla.org/logviewer.html#?job_id=127898922&repo=try

/builds/worker/workspace/build/src/obj-spider/dist/include/js/GCAPI.h:527:16: error: private field 'cx_' is not used [-Werror,-Wunused-private-field]
Flags: needinfo?(jcoppeard)
Patch to remove unused context field from AutoAssertNoGC when MOZ_DIAGNOSTIC_ASSERT_ENABLED is not defined.
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Attachment #8904179 - Flags: review?(sphink)
Comment on attachment 8904179 [details] [diff] [review]
bug1396156-AutoAssertNoGC-unused-field

This patch mostly-works, but it breaks DevEdition builds unfortunately :(

https://treeherder.mozilla.org/logviewer.html#?job_id=128336553&repo=try

/builds/worker/workspace/build/src/gcc/bin/ld: libxul.so: hidden symbol `_ZN2JS14AutoAssertNoGCD1Ev' isn't defined
Flags: needinfo?(jcoppeard)
Attachment #8904179 - Flags: feedback-
(In reply to Ryan VanderMeulen [:RyanVM] from comment #2)
Huh, not sure what's happening there.  Cheers for the heads up.
I tried doing that build locally, but was unable to get it to fail. I could not see an issue with the patch. I can think of one other thing to try doing differently, and I'll do a try push as well.
(In reply to Steve Fink [:sfink] [:s:] from comment #4)
Thanks, I have no idea why this should be failing.
FYI, due to the recent changes in the Fx57 beta cycle announced by Sylvestre, this issue is now going to hit a week from today instead :(. I guess worst-case, we can backout bug 1384513 if needed. That's what I've been doing in my Try pushes to work around it for the time-being.
Summary: A number of builds are going to permafail when Gecko 57 merges to Beta on 2017-09-20 → A number of builds are going to permafail when Gecko 57 merges to Beta on 2017-09-14
The problem is that MOZ_DEV_EDITION isn't getting defined when building js/src.
Flags: needinfo?(jcoppeard)
Attachment #8905887 - Flags: review?(mh+mozilla)
Comment on attachment 8905887 [details] [diff] [review]
bug1396156-moz-dev-edition

Nice catch! That was going to burn us at some point.
Attachment #8905887 - Flags: feedback+
Comment on attachment 8904179 [details] [diff] [review]
bug1396156-AutoAssertNoGC-unused-field

Victory!
Attachment #8904179 - Flags: feedback- → feedback+
Attachment #8904179 - Flags: review?(sphink) → review+
Comment on attachment 8905887 [details] [diff] [review]
bug1396156-moz-dev-edition

Review of attachment 8905887 [details] [diff] [review]:
-----------------------------------------------------------------

We should really move this to moz.configure, but this is OK for now.
Attachment #8905887 - Flags: review?(mh+mozilla) → review+
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2eeabcda5e4c
Define MOZ_DEV_EDITION for js/src. r=ted
https://hg.mozilla.org/integration/mozilla-inbound/rev/84323938eaeb
Fix unused private field error when building AutoAssertNoGC as Beta. r=sfink
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: