Bug 1396156 - Fix unused private field error when building AutoAssertNoGC as Beta. r=sfink